--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
-        Test
+        <header>
+            <nav>
+                <a class="menu"></a>
+                <ul class="links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <div class="search"></div>
+                <ul class="share">
+                    <li><a href="#" class="icon" data-icon="facebook"></a></li>
+                    <li><a href="#" class="icon" data-icon="twitter"></a></li>
+                    <li><a href="#" class="icon" data-icon="googleplus"></a></li>
+                </ul>
+                <div class="account"></div>
+            </nav>
+        </header>  
     </body>
 </html>
