--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a class="menu"></a>
-                <ul class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Store</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+
+<head>
+    <link href="fontawesome/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a class="menu">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </a>
+            <ul class="links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="right">
                 <div class="search"></div>
                 <ul class="share">
                     <li><a href="#" class="icon" data-icon="facebook"></a></li>
@@ -21,7 +29,26 @@
                     <li><a href="#" class="icon" data-icon="googleplus"></a></li>
                 </ul>
                 <div class="account"></div>
-            </nav>
-        </header>  
-    </body>
+            </div>
+        </nav>
+    </header>
+    <section class="arow">
+        <div class="sidemenu">
+            <ul class="menu">
+                <li data-icon="home">Home</li>
+                <li data-icon="shop">Store</li>
+                <li data-icon="note">Blog</li>
+                <li data-icon="users">Community</li>
+                <li data-icon="trophy">Contests</li>
+                <li data-icon="info">About</li>
+                <li data-icon="email">Contact</li>
+            </ul>
+            <ul class="contacts">
+                <li class="icon" data-icon="phone">(912) 555-1234
+                <br/>(912) 555-5678</li>
+            </ul>
+        </div>
+    </section>
+</body>
+
 </html>
