--- a/index.html
+++ b/index.html
@@ -45,8 +45,14 @@
             </ul>
             <ul class="contacts">
                 <li class="icon" data-icon="phone">(912) 555-1234
-                <br/>(912) 555-5678</li>
+                    <br />(912) 555-5678</li>
+                <li class="icon" data-icon="pointer">1600 Pennsylvania<br />Ave NW, Washington<br />DC 20500, USA</li>
+                <li class="icon" data-icon="email-white">hello@website.com<br />
+                    office@website.com</li>
             </ul>
+        </div>
+        <div class="submenu">
+            
         </div>
     </section>
 </body>
