--- a/index.html
+++ b/index.html
@@ -51,8 +51,65 @@
                     office@website.com</li>
             </ul>
         </div>
-        <div class="submenu">
-            
+        <ul class="submenu">
+            <li>
+                <a href="#">
+                    <span class="submenu_title">Tech</span>
+                    <ul class="submenu_themes">
+                        <li>Software & Apps</li>
+                        <li>Gadgets</li>
+                        <li>Mobile</li>
+                    </ul>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="submenu_title">Entertainment</span>
+                    <ul class="submenu_themes">
+                        <li>Film</li>
+                        <li>Gaming</li>
+                        <li>Music</li>
+                        <li>Sport</li>
+                    </ul>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="submenu_title">Business</span>
+                    <ul class="submenu_themes">
+                        <li>Jobs</li>
+                        <li>Marketing</li>
+                        <li>Media</li>
+                    </ul>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <span class="submenu_title">Lifestyle</span>
+                    <ul class="submenu_themes">
+                        <li>Home</li>
+                        <li>Health & Fitness</li>
+                        <li>Travel & Leisure</li>
+                    </ul>
+                </a>
+            </li>
+        </ul>
+        <div class="contact_widgets">
+            <div class="social_row">
+                <ul class="social_menu">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Google +</a></li>
+                    <li><a href="#">Rss Feeds</a></li>
+                    <li><a href="#">Pinterest</a></li>
+                </ul>
+                <div class="social_widgets">
+                    <img src="facebook_widget.svg"/>
+                    <img src="twitter_widget.svg"/>
+                </div>
+            </div>
+            <div class="sign_in_widget">Sign in</div>
+            <div class="join_newsletter_widget">Join newsletter</div>
         </div>
     </section>
 </body>
