--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -129,6 +129,20 @@
                     <button>SIGN UP</button>
                 </form>
             </div>
+        </div>
+    </section>
+    <section class="arow">
+        <div class="gallery">
+            <div tabindex="0"><img src="images/cat1.jpg"><div>
+                <h2>Featured Story</h2>
+                <p>Now that the holiday gift-giving time is over, we're 
+                    sure many of our readers unwrapped some new consoles. 
+                    Despite its long life on the market...</p>
+                <a class="btn">View more</a>
+            </div></div>
+            <div tabindex="0"><img src="images/cat2.jpg"><div>Cat2</div></div>
+            <div tabindex="0"><img src="images/cat3.jpg"><div>Cat3</div></div>
+            <div tabindex="0"><img src="images/cat4.jpg"><div>Cat4</div></div>
         </div>
     </section>
 </body>
